--- a/html_templates/generic_template.html
+++ b/html_templates/generic_template.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ content.front_matter.title }}</title>
-</head>
-<body>
-    <h1>{{ content.front_matter.title }}</h1>
-    {{ content.content | safe }}
+    <title>{{ front_matter.title }}</title>
+  </head>
+  <body>
+    <h1>{{ front_matter.title }}</h1>
+    <div>{{ content | safe }}</div>
+    <!-- Include the reusable content if it exists 
+    {% if content_dict.reusable.KeyFeatures %}
+        <div>{{ content_dict.reusable.KeyFeatures | safe }}</div>
+    {% endif %}
+    -->
 </body>
 </html>
