updated script to add more granularity for content reuse (using content without title), updated tag syntax in markdown files (overview and userguide), built html files and verified content rendering, built is successful.

--- a/html_outputs/FinanceTracker-Overview.html
+++ b/html_outputs/FinanceTracker-Overview.html
@@ -9,28 +9,19 @@
   <div><h1>Welcome to FinanceTracker</h1>
 <p>FinanceTracker simplifies personal finance management for everyone.</p>
 <h2>Product Description</h2>
-<p>FinanceTracker helps you track expenses, monitor investments, budget, and more.
-[EndReusable]</p>
+<p>FinanceTracker helps you track expenses, monitor investments, budget, and more.</p>
 <h2>Key Features</h2>
 <ul>
 <li>Expense Tracking: Log and categorize daily expenses.</li>
 <li>Investment Monitoring: Keep an eye on your investments.</li>
 <li>Budget Planning: Set financial goals and monitor progress.</li>
-<li>Reports and Insights: Visualize financial data with detailed reports.
-[EndReusable]</li>
+<li>Reports and Insights: Visualize financial data with detailed reports.</li>
+<li>AI Financial Coach: Enhance your knowledge about finances and optimize your spending to save more.</li>
 </ul>
 <h2>Getting Started</h2>
 <p>Follow these steps to get started with FinanceTracker quickly and efficiently.</p>
 <p>...</p></div>
-  <!-- Include the reusable content if it exists 
-  
-  <div><h2>Key Features</h2>
-<ul>
-<li>Expense Tracking: Log and categorize daily expenses.</li>
-<li>Investment Monitoring: Keep an eye on your investments.</li>
-<li>Budget Planning: Set financial goals and monitor progress.</li>
-<li>Reports and Insights: Visualize financial data with detailed reports.</li>
-</ul></div>
-  
-  -->
+<!-- Include the reusable content if it exists
+
+ -->
 </html>
