--- a/html_outputs/FinanceTracker-UserGuide.html
+++ b/html_outputs/FinanceTracker-UserGuide.html
@@ -9,20 +9,20 @@
   <div><p>This comprehensive guide walks you through the features of FinanceTracker.</p>
 <h2>Navigating the App</h2>
 <p>Understand the dashboard and various sections.</p>
-<p>[Include: ProductDescription]</p>
-<p>[Include: KeyFeatures]</p>
-<h2>Support</h2>
-<p>For license related support contact +1800-92001-24 or email to support@FT.com</p>
-<hr /></div>
-  <!-- Include the reusable content if it exists -->
-  
-      <div><h2>Key Features</h2>
+<h2>Product Description</h2>
+<p>FinanceTracker helps you track expenses, monitor investments, budget, and more.</p>
 <ul>
 <li>Expense Tracking: Log and categorize daily expenses.</li>
 <li>Investment Monitoring: Keep an eye on your investments.</li>
 <li>Budget Planning: Set financial goals and monitor progress.</li>
 <li>Reports and Insights: Visualize financial data with detailed reports.</li>
-</ul></div>
+<li>AI Financial Coach: Enhance your knowledge about finances and optimize your spending to save more.</li>
+</ul>
+<h2>Support</h2>
+<p>For license related support contact +1800-92001-24 or email to support@FT.com</p>
+<hr /></div>
+  <!-- Include the reusable content if it exists 
   
+  -->
 </body>
 </html>
