--- a/html_outputs/FinanceTracker-GetStarted.html
+++ b/html_outputs/FinanceTracker-GetStarted.html
@@ -13,8 +13,8 @@
 <p>Create an account to start tracking your finances.</p>
 <h2>First Steps</h2>
 <p>Learn the basics to get up and running with FinanceTracker.</p></div>
-  <!-- Include the reusable content if it exists 
-  
-  -->
+  <!-- Include the reusable content if it exists   -->
+ 
+
 </body>
 </html>
